# cosmos-python-sdk-v5

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  cleanup.py  pyproject.toml  run_benchmarks.bat  test_comprehensive.py  test_emulator.py  test_v4_compatibility.py
benchmarks/: .gitignore  BENCHMARK_VALIDATION.md  HYBRID_BENCHMARK_REPORT.md  README.md  benchmark_runner.py  benchmark_tests.py  quick_benchmark.py  trace_v4.py  trace_v5.py
examples/: async_example.py  basic_example.py  test_api.rs
python/azure/: __init__.py
python/azure/cosmos/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi
python/azure/cosmos/aio/: __init__.py  __init__.pyi
src/: client.rs  container.rs  database.rs  utils.rs
tests/: conftest.py  test_async.py  test_client.py  test_container.py  test_container_string_api.py  test_exceptions.py
